Imagination changelog

xx/xx/xx - trunk:
			- Fixed seg-fault when trying to rotate gradient/text slides.
			- Current slideshow is not closed anymore when clicking cancel in the new slideshow dialog.
			- Slide duration can be finally set to less than a second. That was a long requested feature!
			- Added patch from Giovanni Mariani to fix ffmpeg cmd line error when producing VOB.
			- Added two more text transitions and moved -r encoder option before the input filename thanks to Bruce Guenter. 
			- Fixed bugs #82 and #83 thanks to Davide Capodaglio. 
            		- Fixed compilation error on Fedora 13 (check for libm)
            		- Fix loading of slides without image, bug #3306969
            		- Fix: Propose a project name (unknown.img) when saving a new project from the "save" button.
            		- Rewrote the handling of video formats, including saving/loading the project settings. Fixes bug #3306974.
            		- Added H.264/MPEG-4 AVC support, thanks to David Gnedt

06/03/11 - 3.0:
			- Added Chinese simplified and Chinese traditional translations.
			- Icons in the transition menu are animated.
			- Fixed bug 2900684 in the VOB exported aspect ratio.
			- Added French translation of the documentation thanks to Yann Ubuntu.
			- Added Catalan translation thanks to Manuel Tortosa.
			- Added border to fonts thanks to Robert Cheramy.
		        - Added HD support
			- Fixed ffmpeg support
			- Improved handling of Image not found
			- Fixed export video extension
			- Imagination projects should now have .img as an extention
			- Changed behaviour of "new" and "open" (now work as expected)
			- Fixed #2905255 (Copy/Paste bug)
14/10/09 - 2.1:
			- Added a new transition family named Rochade.
			- Added 3GP export for mobile phones.
			- Fixed seg-fault when using Imagination with GTK 2.18
			- Fixed crash when playing with Ken Burns and slide text after closing the project.
			- Added a slides transitions report dialog.
			- Added Japanese translation.